02 - Faz alteraçoes no script para atender a todos os requisitos relacionados a eventos

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <option value="Playfair Display">Playfair Display (Serif)</option>
         </select>
 
-        <button type="button" class="options">Aplicar</button>
+        <button type="button" id="apply-button" class="options">Aplicar</button>
     </div>
     <footer>
         <h5> 🚀 VQV Trybers ! </h5>
