03 - Faz alteraçoes no index.html para corrigir um erro ortografico

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <span id="font-size-unit" class="options">px</span>
         <label for="font" id="font-family-label" class="options">Escolha uma fonte:</label>
         <select name="font" id="font-family-select" class="options">
-            <option value="Dancing Script">Dancing Script (Cusive)</option>
+            <option value="Dancing Script">Dancing Script (Cursive)</option>
             <option value="Itim">Itim (Cursive)</option>
             <option value="Montserrat">Montserrat (Sans-Serif)</option>
             <option value="Open Sans">Open Sans (Sans-Serif)</option>
