03 - Requisito 3 (Botao Submit e Validacoes)

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <input type="text" name="initial-date" id="initial-date-input" maxlength="10" placeholder="Formato **/**/****" required>
             </label>
         </fieldset>
+        <label for="submit-button">
+            <button type="submit" name="submit" id="submit-button">Enviar</button>
+        </label>
     </form>
     <script src="script.js"></script>
 </body>
