04 - Requisito 4 (Botao Clear)

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <label for="submit-button">
             <button type="submit" name="submit" id="submit-button">Enviar</button>
         </label>
+        <label for="clear-button">
+            <button type="reset" name="clear" id="clear-button">Limpar</button>
+        </label>
     </form>
     <script src="script.js"></script>
 </body>
