--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 </div>
                 <div class="col-md">
                     <div class="form-floating">
-                        <input type="text" name="cpf" id="cpf-input" class="form-control" maxlength="11"
-                            placeholder="Digite o seu CPF" required>
+                        <input type="text" name="cpf" id="cpf-input" class="form-control" maxlength="14"
+                            placeholder="Digite o seu CPF" data-inputmask="'mask': '999.999.999-99'" required>
                         <label for="cpf-input" class="form-label">CPF</label>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                 <div class="col-md">
                     <label for="initial-date-input" class="form-label">Data de início</label>
                     <input type="text" name="initial-date" id="initial-date-input" class="form-control" maxlength="10"
-                        placeholder="Formato **/**/****" required>
+                        placeholder="Formato **/**/****" data-inputmask="'mask': '99/99/9999'" required>
                 </div>
             </div>
         </div>
@@ -114,6 +114,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha256-Ml0Z+aH2Ktgvnzgqh39Cv0R8jLspPdfNLAPPO88vFGo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/pikaday@1.8.2/pikaday.min.js"></script>
+    <script src="/node_modules/inputmask/dist/inputmask.min.js"></script>
+    <script src="/node_modules/inputmask/dist/bindings/inputmask.binding.js"></script>
     <script src="script.js"></script>
 </body>
 
